--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,8 +8,14 @@
     <link rel="stylesheet" href="style.css">
     <title>Tic-Tac-Toe</title>
 </head>
+
 <body>
     <h1>Tic-Tac-Toe</h1>
+    <div class="container">
+        
+
+    </div>
     <script src="script.js"></script>
 </body>
+
 </html>
