Make first attempt at an animated menu screen

--- a/index.html
+++ b/index.html
@@ -11,8 +11,13 @@
 
 <body>
     <h1>Tic-Tac-Toe</h1>
-    <div class="container">
+    <h2>Shall we Play?</h2>
+    <div class="options">
         
+        <button id="positive">Yes</button>
+        <button id="negative">No</button>
+    </div>
+    <div class="container">
 
     </div>
     <script src="script.js"></script>
